--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -299,16 +299,20 @@ only screen and (min-device-pixel-ratio: 1.5) {
     padding:0;
   }
   #searchResultUl li, ul.ui-autocomplete li {
-    margin-bottom:2px;
+/*    margin-bottom:2px;*/
     font-size:14px;
-    padding:15px 18px;
+/*    padding:15px 18px;*/
   }
   .searchResults {
     width:90%;
     margin:0 auto;
+  }
+  #airportLst #searchHeader {
     padding:10px 0;
     text-align:center;
     background-color:#c4c4c4;
+    display:block;
+    width:100%;
   }
   #searchResultUl {
     padding:0;
@@ -330,16 +334,17 @@ only screen and (min-device-pixel-ratio: 1.5) {
       text-align: right;
     }
   ul.ui-autocomplete {
-    top:118px;
-    width: 96%;
-    margin: 0px 0px 0px -18px;
+/*    top:118px;*/
+    width: 100%;
+/*    margin: 0px 0px 0px -18px;*/
     overflow: hidden;
+    position:relative;
   }
   ul.ui-autocomplete li {
     font-weight:bold;
     background-color:#e9e9e9;
     border-bottom:solid 1px #c4c4c4;
-    width: 90;
+    width: 100%;
   }
   .lightGrayBg { background-color:#e9e9e9; }
   .grayBg {background-color:#9E9E9E;}
@@ -454,23 +459,25 @@ only screen and (min-device-pixel-ratio: 1.5) {
   }
 
   .ui-autocomplete .ui-menu-item {
-    margin-bottom: 2px;
-    padding: 11px 18px;
-    font-size: 14px;
+/*    margin-bottom: 2px;*/
+/*    padding: 11px 18px;*/
+    font-size: 13px;
     line-height: 0;
     width: 100%;
+    text-align:center;
   }
 
   .ui-autocomplete .ui-menu-item a {
     font-family: arial;
+    padding:10px !important;
+    font-weight: normal !important;
   }
 
   .ui-state-hover {
     background:none !important;
-    font-size: 14px !important;
-    font-weight: bold !important;
+    font-size: 13px !important;
+    font-weight: normal !important;
     border:none !important;
-    width: 90% !important;
     margin:0 !important;
   }
 
@@ -529,8 +536,8 @@ only screen and (min-device-pixel-ratio: 1.5) {
     height:19px;
     margin:-2px 10px 0 10px;
   }
-
-} /*   end of media query */
+}
+ /*   end of media query */
 
 
 a, input[type='button'], input[type='submit'], #uipv_main_adults, #uipv_main_child, #uipv_main_infants {
