--- a/app/views/flight/search.html.erb
+++ b/app/views/flight/search.html.erb
@@ -31,8 +31,12 @@
     </div>
   </div>
   <%- if session[:origin].blank? %>
-    <div id="airportLst" class="searchResults left fullwidth">Search airports via City or Airport Code</div>
+    <div id="airportLst" class="searchResults left fullwidth">
+      <span id="searchHeader">Search airports via City or Airport Code</span>
+    </div>
   <%- else -%>
-    <div id="airportLst" class="searchResults left fullwidth"></div>
+    <div id="airportLst" class="searchResults left fullwidth">
+      <span id="searchHeader">Search airports via City or Airport Code</span>
+    </div>
   <%- end -%>
 </div>
