--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -534,7 +534,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     background:url("geoSearch.png") no-repeat;
     width:20px;
     height:19px;
-    margin:-2px 10px 0 10px;
+    margin-top:-2px;
   }
 }
  /*   end of media query */
