--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,13 +69,13 @@
             centerLatitude = position.coords.latitude;
             centerLongitude = position.coords.longitude;
             // // remove me...
-            centerLatitude = -33.870721;
-            centerLongitude = 151.204814;
-            findClosestAirport(centerLatitude, centerLongitude);
+            // centerLatitude = -33.870721;
+            // centerLongitude = 151.204814;
+            // findClosestAirport(centerLatitude, centerLongitude);
           });
         else {
-          findClosestAirport(centerLatitude, centerLongitude);
-          alert('Unable to get nearby airports');
+          // findClosestAirport(centerLatitude, centerLongitude);
+          // alert('Unable to get nearby airports');
         }
       });
     </script>
