--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -19,7 +19,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
   body {background: green;}
 }*/
 
-@media only screen and (max-width: 480px) {
+/*@media only screen and (max-width: 480px) {*/
 
   header {
     background: transparent url("headBG.jpg") repeat-x;
@@ -294,11 +294,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
     margin:0 auto;
   }
   .search header { height:85px; }
-  #main #searchResultUl ul, ul.ui-autocomplete {
+  #main #searchResultUl ul, ul.ui-autocomplete, ul.ui-autocomplete2 {
     margin:0;
     padding:0;
   }
-  #searchResultUl li, ul.ui-autocomplete li {
+  #searchResultUl li, ul.ui-autocomplete li, ul.ui-autocomplete2 li {
 /*    margin-bottom:2px;*/
     font-size:14px;
 /*    padding:15px 18px;*/
@@ -333,14 +333,12 @@ only screen and (min-device-pixel-ratio: 1.5) {
       width: 33px;
       text-align: right;
     }
-  ul.ui-autocomplete {
-/*    top:118px;*/
+  ul.ui-autocomplete, ul.ui-autocomplete2 {
     width: 100%;
-/*    margin: 0px 0px 0px -18px;*/
     overflow: hidden;
     position:relative;
   }
-  ul.ui-autocomplete li {
+  ul.ui-autocomplete li, ul.ui-autocomplete2 li {
     font-weight:bold;
     background-color:#e9e9e9;
     border-bottom:solid 1px #c4c4c4;
@@ -458,19 +456,18 @@ only screen and (min-device-pixel-ratio: 1.5) {
     min-height:276px;
   }
 
-  .ui-autocomplete .ui-menu-item {
+  .ui-autocomplete .ui-menu-item, .ui-autocomplete2 .ui-menu-item {
     font-size: 13px;
     line-height: 0;
     width: 100%;
     text-align:center;
   }
 
-  .ui-autocomplete .ui-menu-item a {
+  .ui-autocomplete .ui-menu-item a, .ui-autocomplete2 .ui-menu-item a {
     font-family: arial;
     padding:10px !important;
     font-weight: normal !important;
   }
-  
 
   .ui-state-hover {
     background:none !important;
@@ -520,6 +517,9 @@ only screen and (min-device-pixel-ratio: 1.5) {
     width:100%;
     margin:0 -20px;
   }
+/*  #geolocationTxt span {
+    float:left;
+  }*/
   #plane {
     background:url("icons.png") no-repeat;
     width:18px;
@@ -532,29 +532,7 @@ only screen and (min-device-pixel-ratio: 1.5) {
     height:19px;
     margin-top:-2px;
   }
-  ul.ui-autocomplete2 {
-    width: 100%;
-    overflow: hidden;
-    position:relative;
-  }
-  ul.ui-autocomplete2 li {
-    font-weight:bold;
-    background-color:#e9e9e9;
-    border-bottom:solid 1px #c4c4c4;
-    width: 100%;
-  }
-  .ui-autocomplete2 .ui-menu-item {
-    font-size: 13px;
-    line-height: 0;
-    width: 100%;
-    text-align:center;
-  }
-  .ui-autocomplete2 .ui-menu-item a {
-    font-family: arial;
-    padding:10px !important;
-    font-weight: normal !important;
-  }
-}
+/*}*/
  /*   end of media query */
 
 
