--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,8 +1,24 @@
+/*==============================================================================================
+                              TABLE OF CONTENTS
+================================================================================================
+                            * MEDIA QUERY
+                              ** HEADER STYLES
+                              ** FOOTER STYLES
+                              ** FLIGHT INDEX STYLES
+                              ** FLIGHT SEARCH HEADER STYLES
+                              ** FLIGHT SEARCH STYLES
+                              ** GEOLOCATION HEADER STYLES
+                            * FIND FLIGHTS ORIGIN AND DESTINATION STYLES
+                            * PASSENGERS STYLES
+                            * CALENDAR HACKS
+                            * FLIGHT SEARCH AREA
+                            * CLASSES
+================================================================================================
+================================================================================================*/
+
 @media only screen and (min-width: 800px){
 
-}/*/mediaquery*/
-
-
+}
 @media
 only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (-o-min-device-pixel-ratio: 3/2),
@@ -11,21 +27,20 @@ only screen and (min-device-pixel-ratio: 1.5) {
 
 }
 
-
-/*@media only screen and (max-width: 480px) {
-  body {background: red;}
-}
-@media only screen and (max-width: 320px) {
-  body {background: green;}
-}*/
-
+/*----------------------------------------------------------------------------------------------- 
+                                    START OF MEDIA QUERY
+------------------------------------------------------------------------------------------------*/
 @media only screen and (max-width: 480px) {
 
+/* HEADER STYLES
+---------------------------------------------------------------------------------------------*/
   header {
     background: transparent url("headBG.jpg") repeat-x;
     height:56px;
   }
-  header div{position:relative}
+  header div {
+    position:relative;
+  }    
   #back {
     position:absolute;
     z-index:10;
@@ -75,53 +90,10 @@ only screen and (min-device-pixel-ratio: 1.5) {
     position:absolute;
     right:5px;
     top:0px;
-   }
-
+  }
   #crumb h3 {
     color:white;
   }
-  footer {
-    width: 100%;
-    height:40px;
-    margin: 0 auto;
-    background-color:#000000;
-    border-bottom:1px solid #666;
-    float:left;
-  }
-  footer nav {
-    text-align:center;
-    padding-top: 3px;
-  }
-  footer nav ul {
-    display: inline-block;
-    height: 35px;
-    padding-top:5px;
-  }
-  footer nav ul li {
-    text-align: center;
-    width:96px;
-    float:left;
-    display: block;
-  }
-  footer nav ul li a, footer nav ul li a:visited {
-    padding: 7px 3px;
-    height: 12px;
-    background-color: #383838;
-    color: #B0B0B0;
-    text-decoration: none;
-    display: block;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    font-size: 10px;
-  }
-  footer #copyright {
-    width:100%;
-    text-align:center;
-    font-size:12px;
-    color:#bebebe;
-  }
-  .withGap {margin-right:8px;}
-  .gap3 {margin-right:3px;}
   .cancelBtn {
     background: url("cancelBtn.jpg") no-repeat;
     width:59px;
@@ -144,7 +116,52 @@ only screen and (min-device-pixel-ratio: 1.5) {
     line-height: 0;
     text-indent: -9999px;
   }
-
+  
+/* FOOTER STYLES
+---------------------------------------------------------------------------------------------*/ 
+  footer {
+    width: 100%;
+    height:40px;
+    margin: 0 auto;
+    background-color:#000000;
+    border-bottom:1px solid #666;
+    float:left;
+  }
+    footer nav {
+      text-align:center;
+      padding-top: 3px;
+    }
+    footer nav ul {
+      display: inline-block;
+      height: 35px;
+      padding-top:5px;
+    }
+    footer nav ul li {
+      text-align: center;
+      width:96px;
+      float:left;
+      display: block;
+    }
+    footer nav ul li a, footer nav ul li a:visited {
+      padding: 7px 3px;
+      height: 12px;
+      background-color: #383838;
+      color: #B0B0B0;
+      text-decoration: none;
+      display: block;
+      -moz-border-radius: 6px;
+      border-radius: 6px;
+      font-size: 10px;
+    }
+    footer #copyright {
+      width:100%;
+      text-align:center;
+      font-size:12px;
+      color:#bebebe;
+    }
+  
+/* FLIGHT INDEX STYLES
+---------------------------------------------------------------------------------------------*/ 
   #main, #main ul#flightNav {
     margin:0 auto;
   }
@@ -175,13 +192,14 @@ only screen and (min-device-pixel-ratio: 1.5) {
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF4500), to(#FF4500), color-stop(.5,#FC6706));
     background: -moz-linear-gradient(top, #FF4500 0%, #FC6706 50%, #FF4500 100%);
   }
-  #flightMenu {margin-top:0 !important;}
+  #flightMenu {
+    margin-top:0 !important;
+  }
   #schedule {
     float:left;
     margin-top:14px;
     width:95%;
   }
-
   #findFlightsSec {
     width:95%;
     margin:1em auto;
@@ -193,7 +211,9 @@ only screen and (min-device-pixel-ratio: 1.5) {
     padding:0;
     height:33px;
   }
-  #flightNav a {font-size:14px;}
+  #flightNav a {
+    font-size:14px;
+  }
   #scheduleDetails {
     width:480px;
     margin:0 auto;
@@ -228,7 +248,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
     display:block;
     float:left;
   }
-
   .sDepartDate {
     margin-top:15px;
   }
@@ -261,14 +280,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
     float:right !important;
     margin-right:-5px;
   }
-  .fullWidth {width:100%}
-  .halfWidth {width:50%;}
-  .half {width:281px;}
-  .floatLeft {float:left;}
-  .floatRight {float:right;}
-  .width99 {width:99%;}
-
-
   .submitList {
     margin:0 auto;
     padding:0;
@@ -278,13 +289,45 @@ only screen and (min-device-pixel-ratio: 1.5) {
   .submitList li {
     float:left;
   }
+  #atd {margin-right:10px;}
 
+/* FLIGHT SEARCH HEADER STYLES
+---------------------------------------------------------------------------------------------*/ 
+  #searchesHeader {
+    background-color: #E7E7E7;
+    float: left;
+    width: 100%;
+    padding: 5px 0;
+    margin-bottom: 3px;
+  }
+  #searchesHeader h3 {
+    margin:0;
+    padding:0;
+  }
+  #clock {
+    background:url("clockIcon.jpg") no-repeat;
+    width:16px;
+    height:16px;
+    margin:1px 5px 0 15px;
+  }
+  #downIcon {
+    background:url("downIcon.jpg") no-repeat 0 4px;
+    width:17px;
+    height:15px;
+    float:right;
+    margin-right:15px;
+  }
+  
+/* FLIGHT SEARCH STYLES
+---------------------------------------------------------------------------------------------*/ 
   #search {
     margin:0 auto;
     padding-top:5px;
     height:76px;
   }
-  #search * { vertical-align:middle; }
+  #search * { 
+    vertical-align:middle; 
+  }
   #search_from_list, #search_to_list {
     width:90%;
     margin:0 auto 20px;
@@ -293,15 +336,15 @@ only screen and (min-device-pixel-ratio: 1.5) {
     width:596px;
     margin:0 auto;
   }
-  .search header { height:85px; }
+  .search header { 
+    height:85px; 
+  }
   #main #searchResultUl ul, ul.ui-autocomplete, ul.ui-autocomplete2 {
     margin:0;
     padding:0;
   }
   #searchResultUl li, ul.ui-autocomplete li, ul.ui-autocomplete2 li {
-/*    margin-bottom:2px;*/
     font-size:14px;
-/*    padding:15px 18px;*/
   }
   .searchResults {
     width:90%;
@@ -328,11 +371,11 @@ only screen and (min-device-pixel-ratio: 1.5) {
     display:block;
     margin-left:5px;
   }
-    #searchFieldGroup strong {
-      display: inline-block;
-      width: 33px;
-      text-align: right;
-    }
+  #searchFieldGroup strong {
+    display: inline-block;
+    width: 33px;
+    text-align: right;
+  }
   ul.ui-autocomplete, ul.ui-autocomplete2 {
     width: 100%;
     overflow: hidden;
@@ -344,39 +387,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
     border-bottom:solid 1px #c4c4c4;
     width: 100%;
   }
-  .lightGrayBg { background-color:#e9e9e9; }
-  .grayBg {background-color:#9E9E9E;}
-  .borderBottom { border-bottom:solid 1px #c4c4c4; }
-  .upper {text-transform:uppercase;}
-  .bold {font-weight:bold;}
-  .right {float:right;}
-  .width70 {width:70%;}
-
-  #searchesHeader {
-    background-color: #E7E7E7;
-    float: left;
-    width: 100%;
-    padding: 5px 0;
-    margin-bottom: 3px;
-  }
-  #searchesHeader h3 {
-    margin:0;
-    padding:0;
-  }
-  #clock {
-    background:url("clockIcon.jpg") no-repeat;
-    width:16px;
-    height:16px;
-    margin:1px 5px 0 15px;
-  }
-  #downIcon {
-    background:url("downIcon.jpg") no-repeat 0 4px;
-    width:17px;
-    height:15px;
-    float:right;
-    margin-right:15px;
-  }
-
   #recentSearches {
     width: 100%;
     margin: 0 auto;
@@ -436,39 +446,20 @@ only screen and (min-device-pixel-ratio: 1.5) {
     color: white;
     font-weight:bold;
   }
-  .topradius {
-    border-top-left-radius:7px;
-    border-top-right-radius:7px;
-    -moz-border-top-left-radius:7px;
-    -moz-border-top-right-radius:7px;
-  }
-  .bottomradius {
-    border-bottom-left-radius:7px;
-    border-bottom-right-radius:7px;
-    -moz-border-bottom-left-radius:7px;
-    -moz-border-bottom-right-radius:7px;
-  }
-  .borderBottomGray {
-    border-bottom:solid 1px #5f5e5e;
-  }
-
   #searchPage {
     min-height:276px;
   }
-
   .ui-autocomplete .ui-menu-item, .ui-autocomplete2 .ui-menu-item {
     font-size: 13px;
     line-height: 0;
     width: 100%;
     text-align:center;
   }
-
   .ui-autocomplete .ui-menu-item a, .ui-autocomplete2 .ui-menu-item a {
     font-family: arial;
     padding:10px !important;
     font-weight: normal !important;
   }
-
   .ui-state-hover {
     background:none !important;
     font-size: 13px !important;
@@ -477,17 +468,14 @@ only screen and (min-device-pixel-ratio: 1.5) {
     margin:0 !important;
   }
 
-  /*----- ATD/ATA style -----*/
-  #atd {margin-right:10px;}
-
-  /*--------------------------- geolocation styles ------------------------*/
+/* GEOLOCATION HEADER STYLES
+------------------------------------------------------------------------------------------*/
   #geolocation {
     margin:0 auto;
     width:100%;
     margin-bottom:10px;
     display:block;
-    margin-top:-22px;
-    
+    margin-top:-22px;    
   }
   #geoLocWrap {
     background:url("searchGeoBg.png") repeat-x;
@@ -517,9 +505,6 @@ only screen and (min-device-pixel-ratio: 1.5) {
     width:100%;
     margin:0 -20px;
   }
-/*  #geolocationTxt span {
-    float:left;
-  }*/
   #plane {
     background:url("icons.png") no-repeat;
     width:18px;
@@ -533,7 +518,10 @@ only screen and (min-device-pixel-ratio: 1.5) {
     margin-top:-2px;
   }
 }
- /*   end of media query */
+
+/*----------------------------------------------------------------------------------------------- 
+                                     END OF MEDIA QUERY
+------------------------------------------------------------------------------------------------*/
 
 
 a, input[type='button'], input[type='submit'], #uipv_main_adults, #uipv_main_child, #uipv_main_infants {
@@ -563,13 +551,12 @@ h2#findFlights {
   font-size:18px;
 }
 
-
-/* START - Find Flights Origin and Destination Styles */
+/* FIND FLIGHTS ORIGIN AND DESTINATION STYLES
+------------------------------------------------------------------------------------------*/
 #fromWrap, #toWrap { width:45%}
 #ftSepa {width:10%}
 #toFrom a {text-decoration:none;color:#000;}
 #toFrom h4.tfhead {margin:1em 0 0.25em 0}
-
 #fromContent, #toContent {
   background: transparent url("tfbg.png") repeat-x;
   display:block;
@@ -605,9 +592,9 @@ span#origin_short, span#dest_short {
 span#origin_city, span#dest_city {
   font-size:12px;
 }
-/* END - Find Flights Origin and Destination Styles */
 
-/* Passengers Styles */
+/* PASSENGERS STYLES
+------------------------------------------------------------------------------------------------*/
 .tacenter {text-align:center;}
 h4.wtborder {
   border-top:1px solid #ededed;
@@ -666,7 +653,8 @@ h4.wtborder {
   background: transparent url("passengerDiv.jpg") no-repeat top right;
 }
 
-/* Calendar Hacks */
+/* CALENDAR HACKS
+---------------------------------------------------------------------------------------------*/
 span.icon {
   height:17px;
   width:18px;
@@ -733,26 +721,22 @@ a#calLink {
   margin:0;
   padding:0;
 }
-
 #dr {
   float: left;
   width: 100%;
 }
-
   #dr li div h4 {
     height: 17px;
     background: url("icons.png") no-repeat;
     display: inline-block;
     margin: 0px 0px 1px 0px;
   }
-
 #dd h4, #ffdd h4 {
   text-align: left;
   background-position: right top !important;
   float: left;
   width: 66px;
 }
-
 #ffdd {
   margin-left:5px;
 }
@@ -765,9 +749,6 @@ a#calLink {
   float: right;
   width: 65px;
 }
-
-.left {float:left;}
-.right {float:right;}
 .ui-datepicker {
   border:1px solid #f3f3f3;
   padding:2px;
@@ -776,10 +757,6 @@ a#calLink {
   font-family: Arial, sans-serif !important;
 }
 
-.hidden {display:none;}
-.fullwidth {width:100%;}
-.halfw {width:50%;}
-.halfi {width:34%;}
 #dpDate, #rpDate {
   margin-top: 4px;
   width: 73px;
@@ -820,7 +797,8 @@ span.graytxt {
   border-radius:5px;
 }
 
-/* Flight Search Area */
+/* FLIGHT SEARCH AREA 
+-----------------------------------------------------------------------------------------------*/
 @media only screen and (max-width: 350px) {
   .searchField {
     width: 170px;
@@ -841,12 +819,10 @@ span.graytxt {
   float: left;
   margin: 6px 0px 0px 9px;
 }
-
   .searchFieldGroup {
     display: inline-block;
     border: solid 1px #ccddee;
   }
-
     .searchField {
       padding: 10px 28px 7px 6px;
       border: 1px solid #f85720;
@@ -859,7 +835,6 @@ span.graytxt {
       -webkit-box-shadow:inset 0 0 6px #0f0f0f;
       box-shadow:inset 0 0 6px #0f0f0f;
     }
-
     #clearSearch {
       background: url("searchClear.jpg") no-repeat;
       position: relative;
@@ -870,14 +845,47 @@ span.graytxt {
       height: 20px;
       cursor: pointer;
     }
-    
-/*    #uipv_ul_adults li, #uipv_ul_child li, #uipv_ul_infants li{
-      outline:0;
-      -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
-    }*/
-
 .normalText {
   text-decoration: none !important;
   color: #bebebe !important;
 }
+
+/* CLASSES
+------------------------------------------------------------------------------------------*/
+.bold {font-weight:bold;}
+.borderBottom { border-bottom:solid 1px #c4c4c4; }
+.borderBottomGray {
+  border-bottom:solid 1px #5f5e5e;
+}
+.bottomradius {
+  border-bottom-left-radius:7px;
+  border-bottom-right-radius:7px;
+  -moz-border-bottom-left-radius:7px;
+  -moz-border-bottom-right-radius:7px;
+}
+.floatLeft {float:left;}
+.floatRight {float:right;}
+.fullwidth {width:100%;}
+.gap3 {margin-right:3px;}
+.grayBg {background-color:#9E9E9E;}
+.half {width:281px;}
+.halfi {width:34%;}
+.halfw {width:50%;}
+.halfWidth {width:50%;}
+.hidden {display:none;}
+.left {float:left;}
+.lightGrayBg { background-color:#e9e9e9; }
+.right {float:right;}
+.topradius {
+  border-top-left-radius:7px;
+  border-top-right-radius:7px;
+  -moz-border-top-left-radius:7px;
+  -moz-border-top-right-radius:7px;
+}
+.upper {text-transform:uppercase;}
+.withGap {margin-right:8px;}
+.width70 {width:70%;}
+.width99 {width:99%;}
+
+
 
