--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,10 +75,10 @@
             //centerLatitude = -33.870721;
             //centerLongitude = 151.204814;
             <%- end -%>
-            findClosestAirport(centerLatitude, centerLongitude);
+            //findClosestAirport(centerLatitude, centerLongitude);
           });
         else {
-          findClosestAirport(centerLatitude, centerLongitude);
+          //findClosestAirport(centerLatitude, centerLongitude);
           // alert('Unable to get nearby airports');
         }
       });
