--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -892,7 +892,7 @@ span.graytxt {
 
 
 tr td.dDate a {
-  background:#FF5015 !important;
+  background:#ff6a37 !important;
   color: #fff !important;
   text-shadow: none !important;
 }
